// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfilePageTaggedAs - Snapshots > matches snapshot with empty tags 1`] = `
<div
  class="flex flex-col gap-2"
  data-cy="profile-tagged-section"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Tagged as
  </h2>
  <div
    class="flex flex-col gap-2"
    data-testid="container"
  >
    <span
      class="text-sm font-medium text-muted-foreground"
      data-testid="typography"
    >
      No tags added yet.
    </span>
  </div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs hover:text-accent-foreground hover:bg-input/50 h-8 gap-1.5 px-3 has-[>svg]:px-3.5 border border-border bg-foreground/5"
    data-cy="profile-tag-btn"
    data-size="sm"
    data-slot="button"
    data-variant="outline"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tag text-foreground"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
      />
      <circle
        cx="7.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      class="text-foreground text-sm font-bold"
      data-testid="typography"
    >
      Add Tag
    </span>
  </button>
</div>
`;

exports[`ProfilePageTaggedAs - Snapshots > matches snapshot with tags 1`] = `
<div
  class="flex flex-col gap-2"
  data-cy="profile-tagged-section"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Tagged as
  </h2>
  <div
    class="flex flex-col gap-2"
    data-testid="container"
  >
    <div
      data-testid="tagged-item"
    >
      bitcoin
    </div>
    <div
      data-testid="tagged-item"
    >
      nostr
    </div>
    <div
      data-testid="tagged-item"
    >
      web3
    </div>
  </div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs hover:text-accent-foreground hover:bg-input/50 h-8 gap-1.5 px-3 has-[>svg]:px-3.5 border border-border bg-foreground/5"
    data-cy="profile-tag-btn"
    data-size="sm"
    data-slot="button"
    data-variant="outline"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tag text-foreground"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
      />
      <circle
        cx="7.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      class="text-foreground text-sm font-bold"
      data-testid="typography"
    >
      Add Tag
    </span>
  </button>
</div>
`;
